fix some bugs in shopcart and shopcart is more easily to be used

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="./book.png">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1062289_p3tjle1mm1p.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1062289_tru72vzy3t8.css">
     <title>e-book</title>
   </head>
   <body>
